8148490: RegisterSaver::restore_live_registers() fails to restore xmm registers on 32 bit

Fixed stack offsets for xmm register saving/restoring code on 32 bit.

Reviewed-by: kvn, mcberg